--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.12",
-    "@types/node": "10.12.18",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
+    "@types/jest": "^23.3.12",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-intl": "^2.3.15",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-intl": "^2.7.2",
     "react-scripts": "2.1.3",
-    "typescript": "3.2.2"
+    "semantic-ui-react": "^0.84.0",
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
